Log for API implemented
