# src/config/swagger.json
@@ -68,165 +68,163 @@
                 "x-throttling-tier": "Unlimited"
             }
         },
-       "/api/allergyMaster/addAllergyMaster":{
-        "post": {
-            "description": "To Create a Allergy for the Master",
-            "parameters": [
-                {
-                    "in": "header",
-                    "name": "user_uuid",
-                    "required": true,
-                    "type": "integer"
-                },
-                {
-                    "in": "body",
-                    "name": "allergy master",
-                    "required": true,
-                    "schema": {
-                        "$ref": "#/definitions/addAllergyMaster"
+        "/api/allergyMaster/addAllergyMaster": {
+            "post": {
+                "description": "To Create a Allergy for the Master",
+                "parameters": [
+                    {
+                        "in": "header",
+                        "name": "user_uuid",
+                        "required": true,
+                        "type": "integer"
+                    },
+                    {
+                        "in": "body",
+                        "name": "allergy master",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/addAllergyMaster"
+                        }
+                    }
+                ],
+                "produces": [
+                    "application/json",
+                    "application/xml"
+                ],
+                "tags": [
+                    "Allergy Master"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successfully Inserted allergy"
                     }
                 }
-            ],
-            "produces": [
-                "application/json",
-                "application/xml"
-            ],
-            "tags": [
-                "Allergy Master"
-            ],
-            "responses": {
-                "200": {
-                    "description": "Successfully Inserted allergy"
-                }
             }
-        }
-       },
-       "/api/allergyMaster/getAllergyMaster":{
-        "post": {
-            "description": "To get  Allergy Master",
-            "parameters": [
-                {
-                    "in": "header",
-                    "name": "user_uuid",
-                    "required": true,
-                    "type": "integer"
-                }
-               
-            ],
-            "produces": [
-                "application/json",
-                "application/xml"
-            ],
-            "tags": [
-                "Allergy Master"
-            ],
-            "responses": {
-                "200": {
-                    "description": "get Allergy Master"
-                }
-            }
-        }
-       },
-       "/api/allergyMaster/updateAlleryMasterById":{
-        "post": {
-            "description": "To Update Allergy Master",
-            "parameters": [
-                {
-                    "in": "header",
-                    "name": "user_uuid",
-                    "required": true,
-                    "type": "integer"
-                },
-                {
-                    "in": "body",
-                    "name": "update allergy",
-                    "required": true,
-                    "schema": {
-                        "$ref": "#/definitions/updateAlleryMasterById"
+        },
+        "/api/allergyMaster/getAllergyMaster": {
+            "post": {
+                "description": "To get  Allergy Master",
+                "parameters": [
+                    {
+                        "in": "header",
+                        "name": "user_uuid",
+                        "required": true,
+                        "type": "integer"
+                    }
+                ],
+                "produces": [
+                    "application/json",
+                    "application/xml"
+                ],
+                "tags": [
+                    "Allergy Master"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "get Allergy Master"
                     }
                 }
-            ],
-            "produces": [
-                "application/json",
-                "application/xml"
-            ],
-            "tags": [
-                "Allergy Master"
-            ],
-            "responses": {
-                "200": {
-                    "description": "Successfully Updated"
-                }
             }
-        }
-       },
-       "/api/allergyMaster/deleteAllergyMaster":{
-        "post": {
-            "description": "To Delete Allergy Master",
-            "parameters": [
-                {
-                    "in": "header",
-                    "name": "user_uuid",
-                    "required": true,
-                    "type": "integer"
-                },
-                {
-                    "in": "body",
-                    "name": "DeleteId",
-                    "required": true,
-                    "schema": {
-                        "$ref": "#/definitions/deleteAllergyMaster"
+        },
+        "/api/allergyMaster/updateAlleryMasterById": {
+            "post": {
+                "description": "To Update Allergy Master",
+                "parameters": [
+                    {
+                        "in": "header",
+                        "name": "user_uuid",
+                        "required": true,
+                        "type": "integer"
+                    },
+                    {
+                        "in": "body",
+                        "name": "update allergy",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/updateAlleryMasterById"
+                        }
+                    }
+                ],
+                "produces": [
+                    "application/json",
+                    "application/xml"
+                ],
+                "tags": [
+                    "Allergy Master"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successfully Updated"
                     }
                 }
-            ],
-            "produces": [
-                "application/json",
-                "application/xml"
-            ],
-            "tags": [
-                "Allergy Master"
-            ],
-            "responses": {
-                "200": {
-                    "description": "Successfully Inserted EMR Workflow"
-                }
             }
-        }
-       },
-       "/api/allergyMaster/getAlleryMasterById":{
-        "post": {
-            "description": "To get by Id",
-            "parameters": [
-                {
-                    "in": "header",
-                    "name": "user_uuid",
-                    "required": true,
-                    "type": "integer"
-                },
-                {
-                    "in": "body",
-                    "name": "getbyId",
-                    "required": true,
-                    "schema": {
-                        "$ref": "#/definitions/getAlleryMasterById"
+        },
+        "/api/allergyMaster/deleteAllergyMaster": {
+            "post": {
+                "description": "To Delete Allergy Master",
+                "parameters": [
+                    {
+                        "in": "header",
+                        "name": "user_uuid",
+                        "required": true,
+                        "type": "integer"
+                    },
+                    {
+                        "in": "body",
+                        "name": "DeleteId",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/deleteAllergyMaster"
+                        }
+                    }
+                ],
+                "produces": [
+                    "application/json",
+                    "application/xml"
+                ],
+                "tags": [
+                    "Allergy Master"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successfully Inserted EMR Workflow"
                     }
                 }
-            ],
-            "produces": [
-                "application/json",
-                "application/xml"
-            ],
-            "tags": [
-                "Allergy Master"
-            ],
-            "responses": {
-                "200": {
-                    "description": "Successfully Inserted EMR Workflow"
+            }
+        },
+        "/api/allergyMaster/getAlleryMasterById": {
+            "post": {
+                "description": "To get by Id",
+                "parameters": [
+                    {
+                        "in": "header",
+                        "name": "user_uuid",
+                        "required": true,
+                        "type": "integer"
+                    },
+                    {
+                        "in": "body",
+                        "name": "getbyId",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/getAlleryMasterById"
+                        }
+                    }
+                ],
+                "produces": [
+                    "application/json",
+                    "application/xml"
+                ],
+                "tags": [
+                    "Allergy Master"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successfully Inserted EMR Workflow"
+                    }
                 }
             }
-        }
-       },
-       
+        },
         "/api/emr-workflow-settings/create": {
             "post": {
                 "description": "To Create a EMR Workflow for the Master",
@@ -961,6 +959,41 @@
                     {
                         "in": "query",
                         "name": "fav_type_id",
+                        "required": true,
+                        "type": "integer"
+                    }
+                ],
+                "tags": [
+                    "favourite"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful",
+                        "schema": {
+                            "$ref": "#/definitions/getFavourite"
+                        }
+                    },
+                    "400": {
+                        "description": "Sorry! Something Went Wrong"
+                    }
+                },
+                "x-auth-type": "Application & Application User",
+                "x-throttling-tier": "Unlimited"
+            }
+        },
+        "/api/favourite/getTreatmentFavourite": {
+            "get": {
+                "description": "To get list of favourites for the Doctor login",
+                "parameters": [
+                    {
+                        "in": "header",
+                        "name": "user_uuid",
+                        "required": true,
+                        "type": "integer"
+                    },
+                    {
+                        "in": "query",
+                        "name": "departmentId",
                         "required": true,
                         "type": "integer"
                     }
@@ -2263,107 +2296,90 @@
         }
     },
     "definitions": {
-        "addAllergyMaster":{
-          
-            
-                "type": "object",
-                "properties": {
-                    "allergy_type_uuid": {
-                        "type": "integer"
-                    },
-                    "allergey_code": {
-                        "type": "string"
-                    },
-                    "allergy_name": {
-                        "type": "string"
-                    },
-                    "allergy_description": {
-                        "type": "string"
-                    },
-                    "generic_uuid": {
-                        "type": "integer"
-                    },
-                    "diet_item_uuid": {
-                        "type": "integer"
-                    },
-                    "item_master_uuid": {
-                        "type": "integer"
-                    },
-                    "is_active":{
-                        "type": "integer" 
-                    },
-                    "revision":{
-                        "type": "integer" 
-                    }
-                   
-                
+        "addAllergyMaster": {
+            "type": "object",
+            "properties": {
+                "allergy_type_uuid": {
+                    "type": "integer"
+                },
+                "allergey_code": {
+                    "type": "string"
+                },
+                "allergy_name": {
+                    "type": "string"
+                },
+                "allergy_description": {
+                    "type": "string"
+                },
+                "generic_uuid": {
+                    "type": "integer"
+                },
+                "diet_item_uuid": {
+                    "type": "integer"
+                },
+                "item_master_uuid": {
+                    "type": "integer"
+                },
+                "is_active": {
+                    "type": "integer"
+                },
+                "revision": {
+                    "type": "integer"
+                }
             }
         },
-        "updateAlleryMasterById":{
-          
-           
-                "type": "object",
-                "properties": {
-                    "Allergy_id": {
-                        "type": "integer"
-                    },
-                    "allergy_type_uuid": {
-                        "type": "integer"
-                    },
-                    "allergey_code": {
-                        "type": "string"
-                    },
-                    "allergy_name": {
-                        "type": "string"
-                    },
-                    "allergy_description": {
-                        "type": "string"
-                    },
-                    "generic_uuid": {
-                        "type": "integer"
-                    },
-                    "diet_item_uuid": {
-                        "type": "integer"
-                    },
-                    "item_master_uuid": {
-                        "type": "integer"
-                    },
-                    "is_active":{
-                        "type": "integer" 
-                    },
-                    "revision":{
-                        "type": "integer" 
-                    }
-                
+        "updateAlleryMasterById": {
+            "type": "object",
+            "properties": {
+                "Allergy_id": {
+                    "type": "integer"
+                },
+                "allergy_type_uuid": {
+                    "type": "integer"
+                },
+                "allergey_code": {
+                    "type": "string"
+                },
+                "allergy_name": {
+                    "type": "string"
+                },
+                "allergy_description": {
+                    "type": "string"
+                },
+                "generic_uuid": {
+                    "type": "integer"
+                },
+                "diet_item_uuid": {
+                    "type": "integer"
+                },
+                "item_master_uuid": {
+                    "type": "integer"
+                },
+                "is_active": {
+                    "type": "integer"
+                },
+                "revision": {
+                    "type": "integer"
+                }
             }
         },
-        "deleteAllergyMaster":{
-          
-           
-                "type": "object",
-                "properties": {
-                    "Allergy_id": {
-                        "type": "integer"
-                    }
-                    
-                   
-                
+        "deleteAllergyMaster": {
+            "type": "object",
+            "properties": {
+                "Allergy_id": {
+                    "type": "integer"
+                }
             }
         },
-        "getAlleryMasterById":{
-            
-            
-                "type": "object",
-                "properties": {
-                    "Allergy_id": {
-                        "type": "integer"
-                   
-                    }
-                
+        "getAlleryMasterById": {
+            "type": "object",
+            "properties": {
+                "Allergy_id": {
+                    "type": "integer"
+                }
             }
         },
-
-        "getReferenceIdName":{
+        "getReferenceIdName": {
             "type": "object",
             "properties": {
                 "tablename": {
@@ -2991,6 +3007,9 @@
                             "is_active": {
                                 "type": "boolean",
                                 "example": true
+                            },
+                            "treatment_kit_uuid": {
+                                "type": "integer"
                             }
                         }
                     }
